more recent changes than were available on zooty at the time of initial checkin. bookmark tools have been improved for parsing links and generating a firefox compatible web page.  new fortunes.  differ has had some knowledge of git repositories added. clam changes assorted.

--- a/core/tools/clam_tools/makefile
+++ b/core/tools/clam_tools/makefile
@@ -5,7 +5,11 @@ include cpp/variables.def
 PROJECT = clam_tools
 TYPE = application
 DEFINITIONS += __BUILD_STATIC_APPLICATION__
-LIBS_USED += pthread
+
+# why was that there?
+#LIBS_USED += pthread
+#
+
 ifeq "$(OMIT_VERSIONS)" ""
   SOURCE += clamtools_version.rc 
 endif
