--- a/production/feisty_meow_config.ini
+++ b/production/feisty_meow_config.ini
@@ -2,13 +2,13 @@
 [version]
 # specifies the version of the code that is being constructed here.
 major=2
-minor=108
-revision=87
+minor=130
+revision=1
 build=0
 
 # specifies the remainder of the version record info.
 company=Feisty Meow Concerns, Ltd.
-copyright=(C) 1987-2010 Chris Koeritz & Others, under GNU GPL License
+copyright=(C) 1987-$now Chris Koeritz & Others, under GNU GPL License
 legal_info=This software is free to copy under the terms of the GNU GPL (or the GNU Library License if you prefer).  See http://www.gnu.org/licenses/gpl.html for more info.  We suggest peaceful purposes that help all sentient beings.
 product_name=feisty_meow
 web_site=http://feistymeow.org
