--- a/scripts/makefile
+++ b/scripts/makefile
@@ -4,19 +4,19 @@ PROJECT = Shells
 TARGETS += regenerate 
 OTHER_CLEANS += clean_generated 
 # override setting from clam.
-export SHELLDIR = $(YETI_DIR)/scripts
+export FEISTY_MEOW_SCRIPTS = $(FEISTY_MEOW_DIR)/scripts
 
 include rules.def
 
 regenerate:
 	@echo regenerating aliases.
-	echo "SHELLDIR = $(SHELLDIR)"
-	echo "GENERADIR = $(GENERADIR)"
-	$(CATCHER)'if [ ! -d $(GENERADIR) ]; then mkdir $(GENERADIR); fi'
-	$(CATCHER)perl $(SHELLDIR)/core/generate_aliases.pl
-	$(CATCHER)'(export LIGHTWEIGHT_INIT=true; source $(SHELLDIR)/core/profile.sh; perl $(SHELLDIR)/text/new_sig.pl)'
+	echo "FEISTY_MEOW_SCRIPTS = $(FEISTY_MEOW_SCRIPTS)"
+	echo "FEISTY_MEOW_GENERATED = $(FEISTY_MEOW_GENERATED)"
+	$(CATCHER)'if [ ! -d $(FEISTY_MEOW_GENERATED) ]; then mkdir $(FEISTY_MEOW_GENERATED); fi'
+	$(CATCHER)perl $(FEISTY_MEOW_SCRIPTS)/core/generate_aliases.pl
+	$(CATCHER)'(export LIGHTWEIGHT_INIT=true; source $(FEISTY_MEOW_SCRIPTS)/core/profile.sh; perl $(FEISTY_MEOW_SCRIPTS)/text/new_sig.pl)'
 
 clean_generated:
 	@echo removing generated aliases.
-	$(CATCHER)'if [ -d $(GENERADIR) ]; then \rm -rf $(GENERADIR); fi'
+	$(CATCHER)'if [ -d $(FEISTY_MEOW_GENERATED) ]; then \rm -rf $(FEISTY_MEOW_GENERATED); fi'
 
