more changes, to remove the repository dir variable.

--- a/production/codescan.ini
+++ b/production/codescan.ini
@@ -8,19 +8,19 @@ DEFINE_EVENT=1
 DEFINE_API_OUTCOME=1
 
 [directories]
-$REPOSITORY_DIR/source/core/library/basis
-$REPOSITORY_DIR/source/octopi/library/sockets
-$REPOSITORY_DIR/source/octopi/library/cromp
-# $REPOSITORY_DIR/source/lib_src/library/mechanisms
-$REPOSITORY_DIR/source/core/library/nodes
-$REPOSITORY_DIR/source/core/library/filesystem
-# $REPOSITORY_DIR/source/lib_src/library/post_office
-$REPOSITORY_DIR/source/core/library/processes
-# $REPOSITORY_DIR/source/lib_src/library/scheduling
-$REPOSITORY_DIR/source/core/library
-$REPOSITORY_DIR/source/octopi/library
-$REPOSITORY_DIR/source/graphiq/library
-$REPOSITORY_DIR/source
+$FEISTY_MEOW_DIR/source/core/library/basis
+$FEISTY_MEOW_DIR/source/octopi/library/sockets
+$FEISTY_MEOW_DIR/source/octopi/library/cromp
+# $FEISTY_MEOW_DIR/source/lib_src/library/mechanisms
+$FEISTY_MEOW_DIR/source/core/library/nodes
+$FEISTY_MEOW_DIR/source/core/library/filesystem
+# $FEISTY_MEOW_DIR/source/lib_src/library/post_office
+$FEISTY_MEOW_DIR/source/core/library/processes
+# $FEISTY_MEOW_DIR/source/lib_src/library/scheduling
+$FEISTY_MEOW_DIR/source/core/library
+$FEISTY_MEOW_DIR/source/octopi/library
+$FEISTY_MEOW_DIR/source/graphiq/library
+$FEISTY_MEOW_DIR/source
 
 [DEFINE_OUTCOME]
 first=0
