--- a/doc/feisty_meow_dox.config
+++ b/doc/feisty_meow_dox.config
@@ -442,7 +442,13 @@ WARN_LOGFILE           =
 # directories like "/usr/src/myproject". Separate the files or directories 
 # with spaces.
 
-INPUT                  = $(FEISTY_MEOW_DIR)/scripts $(FEISTY_MEOW_DIR)/nucleus $(FEISTY_MEOW_DIR)/octopi $(FEISTY_MEOW_DIR)/graphiq $(PRODUCTION_DIR)/setup_src
+INPUT = \
+  $(FEISTY_MEOW_DIR)/scripts \
+  $(FEISTY_MEOW_DIR)/nucleus \
+  $(FEISTY_MEOW_DIR)/octopi \
+  $(FEISTY_MEOW_DIR)/graphiq \
+  $(FEISTY_MEOW_DIR)/kona/src \
+  $(PRODUCTION_DIR)/setup_src
 
 # If the value of the INPUT tag contains directories, you can use the 
 # FILE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp 
