--- a/production/codescan.ini
+++ b/production/codescan.ini
@@ -8,19 +8,19 @@ DEFINE_EVENT=1
 DEFINE_API_OUTCOME=1
 
 [directories]
-$FEISTY_MEOW_DIR/source/core/library/basis
-$FEISTY_MEOW_DIR/source/octopi/library/sockets
-$FEISTY_MEOW_DIR/source/octopi/library/cromp
+$FEISTY_MEOW_DIR/nucleus/library/basis
+$FEISTY_MEOW_DIR/octopi/library/sockets
+$FEISTY_MEOW_DIR/octopi/library/cromp
 # $FEISTY_MEOW_DIR/source/lib_src/library/mechanisms
-$FEISTY_MEOW_DIR/source/core/library/nodes
-$FEISTY_MEOW_DIR/source/core/library/filesystem
+$FEISTY_MEOW_DIR/nucleus/library/nodes
+$FEISTY_MEOW_DIR/nucleus/library/filesystem
 # $FEISTY_MEOW_DIR/source/lib_src/library/post_office
-$FEISTY_MEOW_DIR/source/core/library/processes
+$FEISTY_MEOW_DIR/nucleus/library/processes
 # $FEISTY_MEOW_DIR/source/lib_src/library/scheduling
-$FEISTY_MEOW_DIR/source/core/library
-$FEISTY_MEOW_DIR/source/octopi/library
-$FEISTY_MEOW_DIR/source/graphiq/library
-$FEISTY_MEOW_DIR/source
+$FEISTY_MEOW_DIR/nucleus/library
+$FEISTY_MEOW_DIR/octopi/library
+$FEISTY_MEOW_DIR/graphiq/library
+$FEISTY_MEOW_DIR
 
 [DEFINE_OUTCOME]
 first=0
