updated a few fields, made prototype back in line with current main config.

--- a/production/prototype_config.ini
+++ b/production/prototype_config.ini
@@ -11,15 +11,16 @@ build=0
 
 # specifies the remainder of the version record info.
 company=Feisty Meow Concerns, Ltd.
-copyright=(C) 1987-2010 Chris Koeritz & Others, under GNU GPL License
+copyright=(C) 1987-$now Chris Koeritz & Others, under GNU GPL License
 legal_info=This software is free to copy under the terms of the GNU GPL (or the GNU Library License if you prefer).  See http://www.gnu.org/licenses/gpl.html for more info.  We suggest peaceful purposes that help all sentient beings.
 product_name=feisty_meow
-web_site=http://feisty_meow.org
+web_site=http://feistymeow.org
 
 # some settings that affect how the code is generated.
 
-# if non-empty, the libraries are built with more debugging information.
+# if DEBUG or NOISY are non-empty, the libraries are built with more debugging information.
 DEBUG=t
+#NOISY=t
 
 # if this is turned on, then all warnings are turned on and they are
 # considered errors.
@@ -45,7 +46,7 @@ endif
 
 # at home or for personal builds, it seems silly to create the whole build
 # package.
-NO_BUILD_PACK=t
+#NO_BUILD_PACK=t
 
 # macros that control which features are enabled in the software.
 
@@ -63,9 +64,17 @@ ifeq "$(BOOT_STRAPPING)" ""
 #  DEFINITIONS += EXTREME_CHECKING=t
 endif
 
-# this flag selects whether to build with win32 unicode enabled.  this only
-# affects win32 compilers (so far).
-DEFINITIONS += UNICODE=t
+# this flag selects whether to build with unicode enabled.  this mainly affects
+# win32 OSes, and right now we know it affects them badly if this is enabled.
+# unix may build slightly differently too, such as for WX widgets.
+ifeq "$(OP_SYSTEM)" "WIN32"
+###
+### do not enable on win32 right now.
+###  DEFINITIONS += UNICODE=t
+###
+else
+  DEFINITIONS += UNICODE=t
+endif
 
 # if this flag is turned on, then memory allocations will be trapped for
 # analysis.  memory leaks will be reported at program end, and the memory
@@ -74,7 +83,7 @@ ifeq "$(BOOT_STRAPPING)" ""
 #  DEFINITIONS += ENABLE_MEMORY_HOOK
 endif
 
-# if the callstack flag below is made available, the code can trace the stack
+# if the callstack flag below is made available, hoople will trace the stack
 # invocations that occur during runtime.  this provides really low-level
 # methods with a way to know how they were invoked.  to get this information.
 # the invoker must be fitted with FUNCDEF macros.
