removed last places the TMP variables was getting deranged. now there's no spurious log in the wrong place.  sheesh.

--- a/production/setup_src/bundle_example/makefile
+++ b/production/setup_src/bundle_example/makefile
@@ -4,8 +4,8 @@ PROJECT = example_bundle
 TYPE = hierarchy
 FIRST_TARGETS = build_bundle
 CLEANUPS = $(FEISTY_MEOW_DIR)/install/example_bundle$(EXE_END)
+# set the unix bin variable so the bundle finds the apps.
 export UNIX_BIN = /bin
-#hmmm: is UNIX_BIN used anywhere?
 
 include cpp/rules.def
 
