--- a/production/setup_src/whole_build_package/makefile
+++ b/production/setup_src/whole_build_package/makefile
@@ -4,13 +4,13 @@ PROJECT = Whole_Build_Pack
 FIRST_TARGETS = create_package
 CLEANUPS = $(PRODUCTION_DIR)/install/whole_build*
 TYPE = hierarchy
-export TARGET=$(TMP)
+export TARGET=/tmp/zz_wholebuild
 
 include cpp/rules.def
 
 create_package:
 ifeq "$(NO_BUILD_PACK)" ""
-	$(HIDE)-mkdir $(TARGET)/waste
+	$(HIDE)-mkdir -p $(TARGET)/waste
 	$(HIDESH)create_whole_build_pack.sh "$(major).$(minor).$(revision).$(build)"
 endif
 
