--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-
-# ignore generated files of various types.
+# ignore generated or non-useful files of various types.
 
 *~
 *#
+*.bak
 __build_configuration.h
 *.class
 .DS_Store
@@ -14,4 +14,4 @@ __build_configuration.h
 *_version.h
 Thumbs.db
 TEMPS*
-*swp
+*.swp
