--- a/nucleus/.cproject
+++ b/nucleus/.cproject
@@ -14,11 +14,11 @@
 				</extensions>
 			</storageModule>
 			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-				<configuration buildProperties="" description="" id="cdt.managedbuild.toolchain.gnu.base.833628797" name="Default" parent="org.eclipse.cdt.build.core.emptycfg">
+				<configuration artifactName="feisty_meow.nucleus" buildProperties="" description="" id="cdt.managedbuild.toolchain.gnu.base.833628797" name="Default" parent="org.eclipse.cdt.build.core.emptycfg">
 					<folderInfo id="cdt.managedbuild.toolchain.gnu.base.833628797.1321755763" name="/" resourcePath="">
 						<toolChain id="cdt.managedbuild.toolchain.gnu.base.968614071" name="cdt.managedbuild.toolchain.gnu.base" superClass="cdt.managedbuild.toolchain.gnu.base">
 							<targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.ELF" id="cdt.managedbuild.target.gnu.platform.base.2013494988" name="Debug Platform" osList="linux,hpux,aix,qnx" superClass="cdt.managedbuild.target.gnu.platform.base"/>
-							<builder arguments="-I &quot;${workspace_loc:/feisty_meow.nucleus}/../scripts/clam&quot;" command="make" id="cdt.managedbuild.target.gnu.builder.base.397021136" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" superClass="cdt.managedbuild.target.gnu.builder.base"/>
+							<builder arguments="-c '(make -I &quot;${workspace_loc:/feisty_meow.nucleus}/../scripts/clam&quot; 2&gt;&amp;1 | grep -v &quot;deps: No such&quot;)'" command="bash" id="cdt.managedbuild.target.gnu.builder.base.397021136" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" superClass="cdt.managedbuild.target.gnu.builder.base"/>
 							<tool id="cdt.managedbuild.tool.gnu.archiver.base.536141204" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base"/>
 							<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.base.140168967" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.base">
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1783803771" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
