--- a/kona/.project
+++ b/kona/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>kona</name>
+	<name>feisty_meow.kona</name>
 	<comment></comment>
 	<projects>
 	</projects>
