example startup script, updated conf.

--- a/database/configuration/stunnel/etc/stunnel/stunnel.conf
+++ b/database/configuration/stunnel/etc/stunnel/stunnel.conf
@@ -67,7 +67,9 @@ output = stunnel.log
 ; vim:ft=dosini
 
 [tracd]
+; port offering ssl trac visibility to the web.
 accept = 8042
-connect = localhost:8000
+; port on localhost for service.
+connect = localhost:10042
 
 
