minor updates to comments.

--- a/production/feisty_meow_config.ini
+++ b/production/feisty_meow_config.ini
@@ -15,9 +15,10 @@ web_site=http://feistymeow.org
 
 # some settings that affect how the code is generated.
 
-# if DEBUG or NOISY are non-empty, the libraries are built with more debugging information.
+# if DEBUG is not empty, then code is built with more debugging information.
 DEBUG=t
-#NOISY=t
+# if NOISY is non-empty, there will be more information emitted during builds.
+NOISY=t
 
 # if this is turned on, then all warnings are turned on and they are
 # considered errors.
