--- a/production/prototype_config.ini
+++ b/production/prototype_config.ini
@@ -2,8 +2,8 @@
 [version]
 # specifies the version of the code that is being constructed here.
 major=2
-minor=108
-revision=1
+minor=140
+revision=50
 build=0
 
 # NOTE: this is an example of a build configuration file in the required format for a
@@ -18,13 +18,14 @@ web_site=http://feistymeow.org
 
 # some settings that affect how the code is generated.
 
-# if DEBUG or NOISY are non-empty, the libraries are built with more debugging information.
+# if DEBUG is not empty, then code is built with more debugging information.
 DEBUG=t
+# if NOISY is non-empty, there will be more information emitted during builds.
 #NOISY=t
 
 # if this is turned on, then all warnings are turned on and they are
 # considered errors.
-STRICT_WARNINGS=t
+#STRICT_WARNINGS=t
 
 # if this is enabled, then the source dependencies are only generated if
 # they're missing or if this file has changed.  non-lax dependencies get
