added NO_TEST_RUNS flag to skip running any tests.

--- a/production/feisty_meow_config.ini
+++ b/production/feisty_meow_config.ini
@@ -24,6 +24,9 @@ DEBUG=t
 # considered errors.
 #STRICT_WARNINGS=t
 
+# enable this if you want to disable the RUN_TARGETS for test execution.
+NO_TEST_RUNS=t
+
 # if this is enabled, then the source dependencies are only generated if
 # they're missing or if this file has changed.  non-lax dependencies get
 # rebuilt whenever a header involved changes, or dependent libraries have
