--- a/production/feisty_meow_config.ini
+++ b/production/feisty_meow_config.ini
@@ -25,7 +25,7 @@ DEBUG=t
 #STRICT_WARNINGS=t
 
 # enable this if you want to disable the RUN_TARGETS for test execution.
-NO_TEST_RUNS=t
+#NO_TEST_RUNS=t
 
 # if this is enabled, then the source dependencies are only generated if
 # they're missing or if this file has changed.  non-lax dependencies get
