--- a/production/feisty_meow_config.ini
+++ b/production/feisty_meow_config.ini
@@ -3,7 +3,7 @@
 # specifies the version of the code that is being constructed here.
 major=2
 minor=140
-revision=52
+revision=54
 build=0
 
 # specifies the remainder of the version record info.
@@ -25,7 +25,7 @@ DEBUG=t
 #STRICT_WARNINGS=t
 
 # enable this if you want to disable the RUN_TARGETS for test execution.
-#NO_TEST_RUNS=t
+NO_TEST_RUNS=t
 
 # if this is enabled, then the source dependencies are only generated if
 # they're missing or if this file has changed.  non-lax dependencies get
