flipped sense of test run flag.

--- a/production/feisty_meow_config.ini
+++ b/production/feisty_meow_config.ini
@@ -24,8 +24,8 @@ DEBUG=t
 # considered errors.
 #STRICT_WARNINGS=t
 
-# enable this if you want to disable the RUN_TARGETS for test execution.
-NO_TEST_RUNS=t
+# comment this out if you do not want to activate RUN_TARGETS for tests.
+#RUN_ALL_TESTS=t
 
 # if this is enabled, then the source dependencies are only generated if
 # they're missing or if this file has changed.  non-lax dependencies get
