--- a/production/feisty_meow_config.ini
+++ b/production/feisty_meow_config.ini
@@ -68,13 +68,8 @@ endif
 # this flag selects whether to build with unicode enabled.  this mainly affects
 # win32 OSes, and right now we know it affects them badly if this is enabled.
 # unix may build slightly differently too, such as for WX widgets.
-ifeq "$(OP_SYSTEM)" "WIN32"
-###
-### do not enable on win32 right now.
-###  DEFINITIONS += UNICODE=t
-###
-else
-  DEFINITIONS += UNICODE=t
+ifneq "$(OP_SYSTEM)" "WIN32"
+#  DEFINITIONS += UNICODE=t
 endif
 
 # if this flag is turned on, then memory allocations will be trapped for
