a ton of changes to fix the production directory.  formerly this directory $FEISTY_MEOW_DIR/production was a mix of source code, library files and generated objects, logs, and executables.  yuck.  now the production folder is just source and libraries.  there is now a new runtime directory for all the generated content, like the apps produced during the build.  this directory is located under $TMP in order to avoid polluting the same directory tree that feisty meow lives in.  this will also support system-wide installs better.

--- a/nucleus/makefile
+++ b/nucleus/makefile
@@ -7,9 +7,9 @@ include variables.def
 ifeq "$(FEISTY_MEOW_DIR)" ""
   export FEISTY_MEOW_DIR := $(CURRENT_DIR)
 endif
-ifeq "$(PRODUCTION_DIR)" ""
-  export PRODUCTION_DIR = $(FEISTY_MEOW_DIR)/production
-endif
+#ifeq "$(PRODUCTION_DIR)" ""
+#  export PRODUCTION_DIR = $(FEISTY_MEOW_DIR)/production
+#endif
 ifeq "$(CLAM_DIR)" ""
   export CLAM_DIR = $(FEISTY_MEOW_SCRIPTS)/clam
 endif
@@ -23,13 +23,13 @@ BUILD_AFTER = library applications tools
 
 include $(CLAM_DIR)/cpp/rules.def
 
-do_make: start_make $(PRODUCTION_DIR)/binaries/manifest.txt end_make
+do_make: start_make $(RUNTIME_DIR)/binaries/manifest.txt end_make
 
 start_make: show_date.start
 
 end_make: show_date.end
 
-$(PRODUCTION_DIR)/binaries/manifest.txt: $(PARAMETER_FILE)
+$(RUNTIME_DIR)/binaries/manifest.txt: $(PARAMETER_FILE)
 	$(HIDESH) -c '\
 if [ ! -d "$(EXECUTABLE_DIR)" ]; then mkdir -p "$(EXECUTABLE_DIR)"; fi; \
 if [ $$? -ne 0 ]; then \
@@ -41,12 +41,12 @@ if [ $$? -ne 0 ]; then \
   echo build failure while copying paths initialization file.; \
   exit 1; \
 fi; \
-bash $(BUILD_SCRIPTS_DIR)/wrapdoze.sh $(CLAM_BIN)/value_tagger$(EXE_END) $(PRODUCTION_DIR)/codescan.ini; \
+bash $(BUILD_SCRIPTS_DIR)/wrapdoze.sh $(CLAM_BINARY_DIR)/value_tagger$(EXE_END) $(PRODUCTION_DIR)/codescan.ini; \
 if [ $$? -ne 0 ]; then \
   echo build failure during value tagging.; \
   exit 1; \
 fi; \
-bash $(BUILD_SCRIPTS_DIR)/wrapdoze.sh $(CLAM_BIN)/write_build_config$(EXE_END); \
+bash $(BUILD_SCRIPTS_DIR)/wrapdoze.sh $(CLAM_BINARY_DIR)/write_build_config$(EXE_END); \
 if [ $$? -ne 0 ]; then \
   echo build failure while writing config.; \
   exit 1; \
