--- a/production/setup_src/whole_build_package/makefile
+++ b/production/setup_src/whole_build_package/makefile
@@ -2,7 +2,7 @@ include cpp/variables.def
 
 PROJECT = Whole_Build_Pack
 FIRST_TARGETS = create_package
-CLEANUPS = $(PRODUCTION_DIR)/install/whole_build*
+CLEANUPS = $(RUNTIME_DIR)/install/whole_build*
 TYPE = hierarchy
 export TARGET=/tmp/zz_wholebuild_$(USER)
 
@@ -10,7 +10,7 @@ include cpp/rules.def
 
 create_package:
 ifeq "$(NO_BUILD_PACK)" ""
-	$(HIDE)-mkdir -p $(TARGET)/waste
+#will it fail?	$(HIDE)-mkdir -p $(TARGET)/waste
 	$(HIDESH)create_whole_build_pack.sh "$(major).$(minor).$(revision).$(build)"
 endif
 
