moving to a better name than FEISTY_MEOW_GENERATED for chewed scripts folder.  too many things are mentioning generated, so this is now the FEISTY_MEOW_LOADING_DOCK variable.  urgh.  other changes to add -p to mkdir for making parents also.  better checking in whack build and stopped attempting to redefine crucial variables there if not defined, since that's bad news.

--- a/scripts/makefile
+++ b/scripts/makefile
@@ -11,12 +11,12 @@ include rules.def
 regenerate:
 	@echo regenerating aliases.
 	echo "FEISTY_MEOW_SCRIPTS = $(FEISTY_MEOW_SCRIPTS)"
-	echo "FEISTY_MEOW_GENERATED = $(FEISTY_MEOW_GENERATED)"
-	$(CATCHER)'if [ ! -d $(FEISTY_MEOW_GENERATED) ]; then mkdir $(FEISTY_MEOW_GENERATED); fi'
+	echo "FEISTY_MEOW_LOADING_DOCK = $(FEISTY_MEOW_LOADING_DOCK)"
+	$(CATCHER)'if [ ! -d $(FEISTY_MEOW_LOADING_DOCK) ]; then mkdir -p $(FEISTY_MEOW_LOADING_DOCK); fi'
 	$(CATCHER)perl $(FEISTY_MEOW_SCRIPTS)/core/generate_aliases.pl
 	$(CATCHER)'(export LIGHTWEIGHT_INIT=true; source $(FEISTY_MEOW_SCRIPTS)/core/launch_feisty_meow.sh; perl $(FEISTY_MEOW_SCRIPTS)/text/new_sig.pl)'
 
 clean_generated:
 	@echo removing generated aliases.
-	$(CATCHER)'if [ -d $(FEISTY_MEOW_GENERATED) ]; then \rm -rf $(FEISTY_MEOW_GENERATED); fi'
+	$(CATCHER)'if [ -d $(FEISTY_MEOW_LOADING_DOCK) ]; then \rm -rf $(FEISTY_MEOW_LOADING_DOCK); fi'
 
