moved the top-level and probably most important feisty meow variable from the seeming utterance of a moron, "DERRRR", as in FEISTY_MEOW_DIR, to a more reasonable word that means the top of something-apex.  so this top level variable is now FEISTY_MEOW_APEX instead.  acme would have been closer to the root of the alphabet, but we don't want to infringe on wile coyote's favorite business's marks.

--- a/doc/feisty_meow_dox.config
+++ b/doc/feisty_meow_dox.config
@@ -443,11 +443,11 @@ WARN_LOGFILE           =
 # with spaces.
 
 INPUT = \
-  $(FEISTY_MEOW_DIR)/scripts \
-  $(FEISTY_MEOW_DIR)/nucleus \
-  $(FEISTY_MEOW_DIR)/octopi \
-  $(FEISTY_MEOW_DIR)/graphiq \
-  $(FEISTY_MEOW_DIR)/kona/src \
+  $(FEISTY_MEOW_APEX)/scripts \
+  $(FEISTY_MEOW_APEX)/nucleus \
+  $(FEISTY_MEOW_APEX)/octopi \
+  $(FEISTY_MEOW_APEX)/graphiq \
+  $(FEISTY_MEOW_APEX)/kona/src \
   $(PRODUCTION_DIR)/setup_src
 
 # If the value of the INPUT tag contains directories, you can use the 
