--- a/production/codescan.ini
+++ b/production/codescan.ini
@@ -8,19 +8,19 @@ DEFINE_EVENT=1
 DEFINE_API_OUTCOME=1
 
 [directories]
-$FEISTY_MEOW_DIR/nucleus/library/basis
-$FEISTY_MEOW_DIR/octopi/library/sockets
-$FEISTY_MEOW_DIR/octopi/library/cromp
-# $FEISTY_MEOW_DIR/source/lib_src/library/mechanisms
-$FEISTY_MEOW_DIR/nucleus/library/nodes
-$FEISTY_MEOW_DIR/nucleus/library/filesystem
-# $FEISTY_MEOW_DIR/source/lib_src/library/post_office
-$FEISTY_MEOW_DIR/nucleus/library/processes
-# $FEISTY_MEOW_DIR/source/lib_src/library/scheduling
-$FEISTY_MEOW_DIR/nucleus/library
-$FEISTY_MEOW_DIR/octopi/library
-$FEISTY_MEOW_DIR/graphiq/library
-$FEISTY_MEOW_DIR
+$FEISTY_MEOW_APEX/nucleus/library/basis
+$FEISTY_MEOW_APEX/octopi/library/sockets
+$FEISTY_MEOW_APEX/octopi/library/cromp
+# $FEISTY_MEOW_APEX/source/lib_src/library/mechanisms
+$FEISTY_MEOW_APEX/nucleus/library/nodes
+$FEISTY_MEOW_APEX/nucleus/library/filesystem
+# $FEISTY_MEOW_APEX/source/lib_src/library/post_office
+$FEISTY_MEOW_APEX/nucleus/library/processes
+# $FEISTY_MEOW_APEX/source/lib_src/library/scheduling
+$FEISTY_MEOW_APEX/nucleus/library
+$FEISTY_MEOW_APEX/octopi/library
+$FEISTY_MEOW_APEX/graphiq/library
+$FEISTY_MEOW_APEX
 
 [DEFINE_OUTCOME]
 first=0
