--- a/production/setup_src/bundle_example/makefile
+++ b/production/setup_src/bundle_example/makefile
@@ -3,7 +3,7 @@ include cpp/variables.def
 PROJECT = example_bundle
 TYPE = hierarchy
 FIRST_TARGETS = build_bundle
-CLEANUPS = $(FEISTY_MEOW_DIR)/install/example_bundle$(EXE_END)
+CLEANUPS = $(FEISTY_MEOW_APEX)/install/example_bundle$(EXE_END)
 # set the unix bin variable so the bundle finds the apps.
 export UNIX_BIN = /bin
 
