fixed undesirable zap of feisty meow loading dock.

--- a/scripts/makefile
+++ b/scripts/makefile
@@ -2,8 +2,8 @@ include variables.def
 
 PROJECT = Shells
 TARGETS += regenerate 
-OTHER_CLEANS += clean_generated 
 # override setting from clam.
+#hmmm: why is that needed?
 export FEISTY_MEOW_SCRIPTS = $(FEISTY_MEOW_APEX)/scripts
 
 include rules.def
@@ -16,7 +16,4 @@ regenerate:
 	$(CATCHER)perl $(FEISTY_MEOW_SCRIPTS)/core/generate_aliases.pl
 	$(CATCHER)'(export LIGHTWEIGHT_INIT=true; source $(FEISTY_MEOW_SCRIPTS)/core/launch_feisty_meow.sh; perl $(FEISTY_MEOW_SCRIPTS)/text/new_sig.pl)'
 
-clean_generated:
-	@echo removing generated aliases.
-	$(CATCHER)'if [ -d $(FEISTY_MEOW_LOADING_DOCK) ]; then \rm -rf $(FEISTY_MEOW_LOADING_DOCK); fi'
 
