fixing generated deps interference with clean
working towards resolving cleaning issues with generated deps file, where a submake will go into a loop during clean trying to make this file.  ugh.

--- a/nucleus/applications/bundler/makefile
+++ b/nucleus/applications/bundler/makefile
@@ -18,9 +18,12 @@ ifeq "$(COMPILER)" "VISUAL_CPP"
 else
   LIBS_USED += z
 endif
+OTHER_CLEANS += clean_stub
 
 include cpp/rules.def
 
 make_stub:
 	$(MAKE) -f makefile.stub
 
+clean_stub:
+	$(MAKE) -f makefile.stub NO_DEPS=t clean
