many pervasive clean-ups
many changes: removed antiquated domain names from the code and docs, removed all variables that were in use which ended in the hated "_DIR" ending.

--- a/doc/feisty_meow_dox.config
+++ b/doc/feisty_meow_dox.config
@@ -448,7 +448,7 @@ INPUT = \
   $(FEISTY_MEOW_APEX)/octopi \
   $(FEISTY_MEOW_APEX)/graphiq \
   $(FEISTY_MEOW_APEX)/kona/src \
-  $(PRODUCTION_DIR)/setup_src
+  $(PRODUCTION_STORE)/setup_src
 
 # If the value of the INPUT tag contains directories, you can use the 
 # FILE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp 
@@ -627,7 +627,7 @@ GENERATE_HTML          = YES
 # If a relative path is entered the value of OUTPUT_DIRECTORY will be 
 # put in front of it. If left blank `html' will be used as the default path.
 
-HTML_OUTPUT            = $(PRODUCTION_DIR)/code_guide
+HTML_OUTPUT            = $(PRODUCTION_STORE)/code_guide
 
 # The HTML_FILE_EXTENSION tag can be used to specify the file extension for 
 # each generated HTML page (for example: .htm,.php,.asp). If it is left blank 
