renamings and add of singly linked list
fixed name of "list" class to be doubly linked list, since it is that.  now kind of grossed out by doubly linked list's implementation; suggest overhauling it so dl list IS a node in the dl list, rather than just a manager of node objects.  also noting it has a gross iterator implementation, but it appears to be critical to the design of the class, so try to leave it intact.
added a very basic singly linked list in order to have the new cycle detection algorithm.  added a test for singly linked lists.
added definition for eclipse on gnu unix of __UNIX__, which calmed a lot of complaints about HOOPLE_MAIN and other memset/strncpy/etc methods.

--- a/nucleus/.cproject
+++ b/nucleus/.cproject
@@ -21,9 +21,15 @@
 							<builder arguments="-c '(make -I &quot;${workspace_loc:/feisty_meow.nucleus}/../scripts/clam&quot; 2&gt;&amp;1 | grep -v &quot;deps: No such&quot;)'" command="bash" id="cdt.managedbuild.target.gnu.builder.base.397021136" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" superClass="cdt.managedbuild.target.gnu.builder.base"/>
 							<tool id="cdt.managedbuild.tool.gnu.archiver.base.536141204" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base"/>
 							<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.base.140168967" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.base">
+								<option id="gnu.cpp.compiler.option.preprocessor.def.786915406" superClass="gnu.cpp.compiler.option.preprocessor.def" valueType="definedSymbols">
+									<listOptionValue builtIn="false" value="__UNIX__"/>
+								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1783803771" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.compiler.base.1489239604" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.base">
+								<option id="gnu.c.compiler.option.preprocessor.def.symbols.1839703248" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
+									<listOptionValue builtIn="false" value="__UNIX__"/>
+								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1083415270" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.linker.base.458164275" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.base"/>
