--- a/kona/.classpath
+++ b/kona/.classpath
@@ -10,5 +10,9 @@
 	<classpathentry kind="lib" path="lib/commons-logging-tests.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.16.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.5.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang3-3.5.jar"/>
+	<classpathentry kind="lib" path="lib/SizeOf.jar"/>
+	<classpathentry kind="lib" path="lib/commons-compress-1.8.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
 	<classpathentry kind="output" path="bin-eclipse"/>
 </classpath>
