made docs build silent, added clean_docs target

--- a/documentation/makefile
+++ b/documentation/makefile
@@ -6,22 +6,32 @@ include cpp/variables.def
 
 PROJECT = Source_Documentation
 TYPE = application
-FIRST_TARGETS += build_doxygen
-CLEANUPS += html
+FIRST_TARGETS += build_docs
 
 include cpp/rules.def
 
-build_doxygen:
-	@echo the defs are $(DEFINITIONS)
+build_docs:
+#	@echo the defs are $(DEFINITIONS)
+	@echo Regenerating documentation for feisty meow with doxygen.  This could take a while...
 	$(HIDESH) -c '\
-doxygen $(wildcard *.config); \
+doxygen $(wildcard *.config) &> "$$TEMPORARIES_PILE/doxygen_run_$$(date +"%Y%m%d%H%M%S").log"; \
 if [ $$? -ne 0 ]; then \
   echo failed to run doxygen on our configuration file.; \
-  echo perhaps it is not installed?; \
+  echo perhaps doxygen is not properly installed?; \
   echo these are the ubuntu install steps:; \
   echo   sudo apt install doxygen graphviz; \
-echo and something else, uhhh....; \
-echo oy; \
 fi \
 '
+	@echo ...done regenerating the feisty meow docs.
+
+clean_docs:
+	@echo dropping code_guide contents.
+	$(HIDESH) -c '\
+for dir in ../production/code_guide; do \
+  for patt in html map md5 png js css ttf dot ; do \
+    rm -f $$dir/*.$$patt; \
+  done; \
+done \
+'
+
 
