added TMPDIR for shunit, got rid of some extra noise

--- a/testkit/makefile
+++ b/testkit/makefile
@@ -1,9 +1,5 @@
-include variables.def
 
-PROJECT = testkit
-FIRST_TARGETS += run_testkit_check
 
-include rules.def
+all:
+	@bash test_driver.sh
 
-run_testkit_check:
-	$(HIDESH) -c 'bash test_driver.sh'
