--- a/testkit/examples/fred-testkit.config
+++ b/testkit/examples/fred-testkit.config
@@ -18,6 +18,9 @@ BASE_USER=${USER}
 # Used for windows testing; provides the path to the binaries directory of cygwin.
 #CYGWIN_BIN_PATH=c:/cygwin/bin
 
+# Used to insert branded bits into documentation and other places potentially.
+TESTKIT_BRANDING="Feisty Meow®"
+
 ##############
 
 # define the tests to run.  this is the most convenient place to put this.
