--- a/kona/log4j.properties
+++ b/kona/log4j.properties
@@ -5,7 +5,9 @@ log4j.rootCategory=, TTY, LOGFILE
 log4j.appender.TTY=org.apache.log4j.ConsoleAppender
 log4j.appender.TTY.Threshold=DEBUG
 log4j.appender.TTY.layout=org.apache.log4j.PatternLayout
-log4j.appender.TTY.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p [%-28c{2}] - %m%n
+log4j.appender.TTY.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p [%-28c{2}] - %m{nolookups}%n
+
+#NOTE: vulnerability with bare percent m style: https://news.ycombinator.com/item?id=29507263
 
 # LOGFILE is set to be a RollingFileAppender using a PatternLayout.
 log4j.appender.LOGFILE=org.apache.log4j.RollingFileAppender
@@ -14,5 +16,5 @@ log4j.appender.LOGFILE.MaxFileSize=10MB
 log4j.appender.LOGFILE.MaxBackupIndex=10
 log4j.appender.LOGFILE.Threshold=DEBUG
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.LOGFILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p [%-28c{2}] - %m%n
+log4j.appender.LOGFILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p [%-28c{2}] - %m{nolookups}%n
 
